--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "core-js": "^3.15.1",
-    "node-sass": "^5.0.0",
     "nuxt": "^2.15.7",
     "rellax": "^1.12.1",
-    "sass-loader": "^10.1.1",
     "vue-carousel": "^0.18.0",
     "vue-parallax-js": "^0.2.3",
     "vue-scroll": "^2.1.13",
     "vue-scrollto": "^2.20.0"
+  },
+  "devDependencies": {
+    "sass": "^1.45.1",
+    "sass-loader": "^10.2.0"
   }
 }
